--- a/products/templates/index.html
+++ b/products/templates/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="{% static 'img/iconK.png' %}">
 
-    <title>Center Kapas</title>
+    <title>Capas</title>
 
     <!-- Ícone do site -->
     <!-- Estilos -->
