--- a/products/templates/pages/contact.html
+++ b/products/templates/pages/contact.html
@@ -7,7 +7,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Center Kapas</title>
+	<title>Capas</title>
 
 	<link rel="icon" type="image/png" href="{% static 'img/iconK.png' %}">
 	<link rel="stylesheet" href="{% static 'styles/main.css' %}">
